Update uri endpoint dengan hapus prefix /api/v1/ pada setiap endpoint di project ini
